# MagnumOpus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/assets/: CREDITS  assets_anims.map  assets_blueprints.map  assets_config.map  assets_fonts.map  assets_music.map  assets_shader.map  assets_sounds.map  assets_tex.map  bubble_test.tga  controlls-cfg.json  drops-cfg.json  elements-cfg.json  sounds-cfg.json
assets/assets/animations/: ball_anim.json  barrel.json  box.json  bullet.json  bullet_fire_shard.json  bullet_ice_shard.json  bullet_stone_shard.json  bullet_time.json  coin_anim.json  crawler_anim.json  crow.json  fireball.json  healthpotion.json  iceball.json  player_anim.json  pyro.json  scorpion_anim.json  soldier.json  stoneball.json  turret_ice.json  vomit_zombie.json  vomitball.json  zombie.json
assets/assets/blueprints/: barrel.json  box.json  bullet.json  bullet_fire_shard.json  bullet_fireball.json  bullet_fireball_exploding.json  (+29 more)
assets_raw/: background_intro.xcf  background_intro_circle.xcf  barrel.xcf  box.xcf  bullet_time.xcf  button.xcf  crow.xcf  element_fire.xcf  element_frost.xcf  element_test.xcf  element_test2.xcf  elements.xcf  fireball.xcf  health_pack.xcf  iceball.xcf  input.xcf  particle_gas.xcf  pyro.xcf  soldier.xcf  stats.xcf  stats_tex.xcf  test_room.tmx  tilemap_base.xcf  tilemap_high.xcf  tilemap_high_alt.xcf  turret_ice.xcf  ui_player_join_message.xcf  ui_small_health.xcf  vomit.xcf  vomit_zombie.xcf  zombie.xcf
dependencies/glm/: CMakeLists.txt
dependencies/happyhttp/: CMakeLists.txt  happyhttp.cpp
dependencies/moodycamel/: concurrentqueue.hpp
dependencies/physfs/: CMakeLists.txt
dependencies/sf2/: CMakeLists.txt  FileParser.hpp  README.md  sf2.hpp
dependencies/soil/: CMakeLists.txt  README  SOIL.c  SOIL.h  SOIL2.c  SOIL2.h  image_helper.c  image_helper.h
modules/: android_toolchain.cmake
src/: CMakeLists.txt  game_engine.hpp  main.cpp  test_level_gen.cpp
src/core/: CMakeLists.txt  animation_data.h++  configuration.cpp  configuration.hpp  engine.cpp  engine.hpp  input_manager.cpp  input_manager.hpp  units.hpp
src/core/asset/: aid.cpp  aid.hpp  asset_manager.cpp  asset_manager.hpp  asset_manager.hxx  stream.cpp  stream.hpp
src/core/audio/: audio_ctx.cpp  audio_ctx.hpp  music.cpp  music.hpp  sound.cpp  sound.hpp  sound_ctx.cpp  sound_ctx.hpp
src/core/ecs/: component.cpp  component.hpp  component.hxx  ecs.cpp  ecs.hpp  ecs.hxx  serializer.cpp  serializer.hpp  serializer_impl.hpp
src/core/gui/: button.cpp  button.hpp  input.cpp  input.hpp  widget.cpp  widget.hpp
src/core/renderer/: animation.cpp  animation.hpp  animation_data.cpp  animation_data.hpp  camera.cpp  camera.hpp  graphics_ctx.cpp  graphics_ctx.hpp  particles.cpp  particles.hpp  primitives.cpp  primitives.hpp  shader.cpp  shader.hpp  sprite_batch.cpp  sprite_batch.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  vertex_object.cpp  vertex_object.hpp  vertex_object.hxx
src/core/sound/: Sound.hpp  music.cpp  music.hpp  sound.cpp  sound.hpp  sound_ctx.cpp  sound_ctx.hpp
src/core/utils/: astar.hpp  events.hpp  log.cpp  log.hpp  math.hpp  math.hxx  maybe.hpp  md5.cpp  md5.hpp  messagebus.hpp  messagebus.hxx  pool.hpp  random.hpp  reflection.cpp  reflection.hpp  stacktrace.cpp  stacktrace.hpp  string_utils.hpp  template_utils.hpp
src/game/: effects.hpp  example_screen.cpp  example_screen.hpp  game_engine.cpp  game_engine.hpp  game_master.cpp  game_master.hpp  game_screen.cpp  game_screen.hpp  game_state.cpp  game_state.hpp  game_ui.cpp  game_ui.hpp  gameover_screen.cpp  gameover_screen.hpp  highscore.cpp  highscore.hpp  intro_screen.cpp  intro_screen.hpp  main_menu_screen.cpp  main_menu_screen.hpp  menu_screen.cpp  menu_screen.hpp  tags.cpp  tags.hpp  ui_container.cpp  ui_container.hpp
src/game/level/: elements.cpp  elements.hpp  level.cpp  level.hpp  level_generator.cpp  level_generator.hpp  room_template.cpp  room_template.hpp  tiled.cpp  tiled.hpp  tilemap.cpp  tilemap.hpp
src/game/sys/ai/: ai_system.cpp  ai_system.hpp  simple_ai_comp.cpp  simple_ai_comp.hpp  target_tag_comp.hpp
src/game/sys/cam/: camera_system.cpp  camera_system.hpp  camera_target_comp.cpp  camera_target_comp.hpp
src/game/sys/combat/: collectable_subsystem.cpp  collectable_subsystem.hpp  collector_comp.cpp  collector_comp.hpp  combat_system.cpp  combat_system.hpp  explosive_comp.cpp  explosive_comp.hpp  friend_comp.cpp  health_comp.cpp  health_comp.hpp  reaper.cpp  reaper.hpp  reaper_subsystem.cpp  reaper_subsystem.hpp  score_comp.cpp  score_comp.hpp  weapon_comp.cpp  weapon_comp.hpp
src/game/sys/combat/comp/: bullet_comp.cpp  bullet_comp.hpp  collector_comp.cpp  collector_comp.hpp  damage_effect_comp.cpp  damage_effect_comp.hpp  explosive_comp.cpp  explosive_comp.hpp  friend_comp.cpp  friend_comp.hpp  health_comp.cpp  health_comp.hpp  score_comp.cpp  score_comp.hpp  weapon_comp.cpp  weapon_comp.hpp
src/game/sys/controller/: controllable_comp.hpp  controller.hpp  controller_system.cpp  controller_system.hpp  input_controller.cpp  input_controller.hpp  mapping.cpp  mapping.hpp  state_comp.cpp  state_comp.hpp
src/game/sys/graphic/: effects.hpp  graphic_system.cpp  graphic_system.hpp  particle_emiter_comp.cpp  particle_emiter_comp.hpp  sprite_comp.cpp  sprite_comp.hpp
src/game/sys/item/: collector_comp.cpp  collector_comp.hpp  drop_comp.cpp  drop_comp.hpp  element_comp.cpp  element_comp.hpp  element_system.cpp  element_system.hpp  item_comp.cpp  item_comp.hpp  item_system.cpp  item_system.hpp
src/game/sys/physics/: manifold.hpp  physics_comp.cpp  physics_comp.hpp  physics_system.cpp  physics_system.hpp  transform_comp.cpp  transform_comp.hpp  transform_system.cpp  transform_system.hpp
src/game/sys/sound/: sound_comp.cpp  sound_comp.hpp  sound_system.cpp  sound_system.hpp
src/game/sys/sprite/: sprite_comp.cpp  sprite_comp.hpp  sprite_system.cpp  sprite_system.hpp
src/game/sys/state/: state_comp.cpp  state_comp.hpp  state_system.cpp  state_system.hpp
src/game/sys/ui/: ui_comp.cpp  ui_comp.hpp  ui_minmal_comp.cpp  ui_minmal_comp.hpp  ui_system.cpp  ui_system.hpp
(+52 files in other folders)
